# bigbot_ros

./: LICENSE  README.md
bigbot_base/: CMakeLists.txt  package.xml
bigbot_base/include/bigbot_base/: roboclaw.h
bigbot_base/src/: DriverNode.cpp  roboclaw.c
bigbot_bringup/: package.xml  setup.cfg  setup.py
bigbot_bringup/bigbot_bringup/: mapgenerator.py  transform.py
bigbot_bringup/launch/: bigbot_sick_lms.launch  lidar_launch.py  location_launch.py  nav2_launch.py  navsat_transform.yaml  rcdrive_launch.py  zed_f9p.yaml
bigbot_cloud/: README.md  package.xml  setup.cfg  setup.py
bigbot_cloud/bigbot_cloud/: cloud_interface.py  cloud_interface_toLL.py  mqtt_systemd_monitor.py  path_conversion_local.py  path_conversion_node.py
bigbot_cloud/launch/: bigbot_cloud.launch.py  bigbot_fleetly.launch.py
bigbot_common/: package.xml  setup.cfg  setup.py
bigbot_common/bigbot_common/: mapgenerator.py  projections.py  roslogger.py  transform.py
bigbot_control/: package.xml  setup.cfg  setup.py
bigbot_control/config/: control.yaml  control_proto.yaml  empty_map.pgm  empty_map.yaml
bigbot_description/: CMakeLists.txt  README.md  package.xml
bigbot_description/launch/: bigbot_launch.py  joint_state_launch.py
bigbot_description/models/bigbot/: bigbot.sdf
bigbot_description/models/bigbot/meshes/: tim_lidar.dae
bigbot_description/models/bigbot_base/: bigbot_base.sdf  model.config
bigbot_description/models/bigbot_proto/meshes/: Assembly_lid_empty.dae  dome_basis_urdf.dae  dome_rot_camera_urdf.dae  wiel_reduced_urdf.dae
bigbot_description/models/fixpos/: fixpos.sdf  model.config
bigbot_description/models/tim_lidar/: model.config
bigbot_description/models/wheel/meshes/: wheel.dae
bigbot_description/rviz/: bigbot.rviz  bigbot_proto.rviz
bigbot_description/urdf/: bigbot.sdf  bigbot.urdf  bigbot_expand.urdf  bigbot_harmonic.urdf  bigbot_no_gazebo.urdf  bigbot_proto.urdf  bigbot_small.urdf  wheel.urdf  wheel2.urdf  wiel_proto.urdf
bigbot_description/worlds/city_world/: city_world.world
bigbot_description/worlds/empty/: empty.world
bigbot_gazebo/: README.md  package.xml  setup.cfg  setup.py
bigbot_gazebo/bigbot_gazebo/: drive_status_simulator.py  odom_connect.py
bigbot_gazebo/config/: bigbot_tru_poses.xml  nav2_pursuit_control.yaml  test_pose.xml
bigbot_gazebo/launch/: gazebo.launch.py  mingazebo.launch.py  minsim.launch.py  nav2.launch.py  simulation.launch.py  spawn_robot.launch.py
bigbot_gazebo/models/bigbot/: bigbot.sdf  model.config
bigbot_gazebo/models/bigbot/meshes/: fixpos.dae
bigbot_gazebo/models/bigbot_proto/: bigbot_proto.sdf  model.config
bigbot_gazebo/models/bigbot_proto/meshes/: Assembly_TIM_lidar_urdf.dae  Assembly_gps_antenna_reduced.dae  dome_rot_hor_urdf.dae
bigbot_gazebo/models/tim_lidar/: lidar.sdf
bigbot_gazebo/models/wheel/: model.config  wheel.sdf  wheel1_9.sdf
bigbot_gazebo/params/: bigbot_bridge.yaml
bigbot_gazebo/rviz/: nav.rviz
bigbot_gazebo/worlds/: netherlands_flat.world  sonoma_raceway.world
bigbot_interfaces/: CMakeLists.txt  package.xml
bigbot_interfaces/msg/: DriveFeedback.msg  GeographicPose.msg  GeographicPosition.msg  PTZSetpoint.msg  PathSection.msg  PathSections.msg  RotPose.msg  SpatialDetectionArray.msg
bigbot_interfaces/srv/: BagControl.srv  ClearFault.srv  EmergencyStop.srv  EmergencyStopGeneric.srv  GeographicPosesToLocal.srv  HardwareStop.srv  PredefinedPath.srv  TopicRecorder.srv
bigbot_teleop/: package.xml  setup.cfg  setup.py
bigbot_teleop/bigbot_teleop/: joymapper.py  rcmapper.py  speaknode.py
bigbot_teleop/launch/: joy_launch.py  rc_launch.py
bigbot_teleop/test/: test_copyright.py
bt_debug_print/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
bt_debug_print/include/bt_debug_print/: debug_print_node.hpp
bt_debug_print/src/: debug_print_node.cpp
gps_fix_simulator/: package.xml
nav2_bigbot_planner/: CMakeLists.txt  global_planner_plugin.xml  package.xml
nav2_bigbot_planner/include/nav2_bigbot_planner/: GenerateForwardPath.hpp  Rotate.hpp  Translate.hpp  bigbot_path_planner.hpp
nav2_bigbot_planner/src/: GenerateForwardPath.cpp  bigbot_path_planner.cpp
systemd/: bigbot_rc.service  network-wait-online.service
