<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bigbot_cloud</name>
  <version>0.0.0</version>
  <description>Cloud (Fleetly) connection robot status (including services)</description>
  <maintainer email="edward@confirmatrobotics.com">Edward Hage</maintainer>
  <license>Apache-2.0</license>


  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>bigbot_interfaces</depend>
  <depend>bigbot_common</depend>
  <depend>nav2_simple_commander</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>
  <depend>robot_localization</depend>
  <depend>paho-mqtt</depend>
  <depend>scipy</depend>
  <depend>numpy</depend>
  <depend>dbus</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
