<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bigbot_gazebo</name>
  <version>0.0.1</version>
  <description>Bigbot simulation with GPS and Lidar in Gazebo</description>
  <maintainer email="edward@confirmatrobotics.com">Edward Hage</maintainer>
  <license>Apache-2.0</license>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>
  <depend>robot_state_publisher</depend>
  <depend>bigbot_description</depend>
  <depend>bigbot_bringup</depend>
  <depend>bigbot_cloud</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_common</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>bigbot_interfaces</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
