<?xml version="1.0"?>
<package format="3">
  <name>bt_debug_print</name>
  <version>0.1.0</version>
  <description>Behavior Tree Debug Print Action Node</description>
  <maintainer email="edward@confirmatrobotics.com">Edward Hage</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>behaviortree_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin_manifest_file="plugin_description.xml"/>
  </export>
</package>
